# files-ingestor

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.json  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docker/: docker-compose.yml
docs/: index.md  modules.md
files_ingestor/: main_http.py  main_terminal.py
files_ingestor/adapters/: config.py  default_logger.py  http.py  http_app.py  null_logger.py  qdrant.py  terminal.py
files_ingestor/adapters/embedding_models/: huggingface.py  ollama.py
files_ingestor/adapters/llms/: anthropic.py  ollama.py
files_ingestor/adapters/repositories/: file_reader.py  local_storage.py  s3_storage.py
files_ingestor/application/commands/: __init__.py  ingest_pdf.py
files_ingestor/application/handlers/: count_file_handler.py  handler.py  ingestion_handler.py  qa_handler.py
files_ingestor/application/queries/: count_file_query.py  question_query.py
files_ingestor/domain/ports/: cloud_storage_port.py  config.py  embedding_model.py  file_processor_port.py  file_reader_port.py  llm.py  logger_port.py  vectorstore.py
files_ingestor/domain/services/: file_processor_service.py  react_agent.py
tests/: test_count_file_handler.py  test_file_processor_service.py  test_http_adapter.py  test_local_storage_adapter.py  test_s3_storage_adapter.py  test_terminal_adapter.py
